# datam

./: Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
src/: app.rs  github.rs  handler.rs  handler_composed.rs  handler_ipfs.rs  handler_local.rs  main.rs  model.rs
