[package]
name = "datam"
description = "A terminal tool to manager your files."
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde_json = "1.0.132"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-send-sync"] }
serde = "1.0.214"
sha2 = "0.10.8"
crypto-common = "0.1.6"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "rt", "macros", "fs"] }
futures = "0.3.31"
log = "0.4.22"
simple-home-dir = "0.4.4"
simple_logger = "5.0.0"
async-trait = "0.1.83"
